[B]3.0.62[/B]
- Added Artwork Downloader integration
- Added AutoCompletion integration
- Added Library Editor Script integration
- Added AutoComplete Toggle to keyboard
- Added theme-color to numeric keyboard

[B]3.0.61[/B]
- Fixed PVR guide overlap
- Fixed main menu not focusing on startup
- Fixed radio-widget's item-label when focused
- Tweaked widget's arrows

[B]3.0.60[/B]
- Added addon-settings button in side-blade
- Added fallback images for episodes
- Fixed missing header in keyboard dialog
- Fixed navigating homescreen > video - widget when there is only content in either Movies or TVShows-library
- Fixed pvr-widget overlapping recording-info
- Reverted resizing plot-area so plot-text is no longer overlayed with mediaflags
- Tweaked player-label

[B]3.0.59[/B]
- Added favourites-scrollbar
- Added subtitles-scrollbar
- Added color-accents
- Added 5 themes
- Added 5 colors 
- Fixed missing aspectratio-info

[B]3.0.58[/B]
- Added configurable sorting methods & direction to node-based submenus
- Tweaked pvr-widgets

[B]3.0.57[/B]
- Added appropriate moviesets-icon and overlay
- Added collection-indicators to all views that did not have them
- Added collection info
- Fixed clickable area for addon shortcuts
- Fixed video- and movie-now-playing info not changing position according to set mainmenu-position
- Edited default tv background
- Removed screenshots from zip

[B]3.0.56[/B]
- Added two mainmenu positions: "high" and "low"
- Changed label "system" to "settings"
- Changed position of title for Videos-widget to avoid it overlapping now playing info.
- Changed weather, pictures, programs and settings widget, they can now be dis/enabled seperately
- Changed layout of MusicInfo from 2 rows to three
- Removed DefaultAlbumCover.png from MusicInfo

[B]3.0.55[/B]
- Added AddonName to Label in Add-on Shortcuts section
- Added custom onclick action for ProgramsWidget (RunAddon)
- Added custom submenu for Programs using root AddonBrowser entries