@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<addon id="skin.confluence.1080" version="3.0.62" name="Confluence 1080" provider-name="OpenELEQ, original work by Jezz_X &amp; Team Kodi">
+<addon id="skin.confluence.1080" version="3.0.63" name="Confluence 1080" provider-name="OpenELEQ, original work by Jezz_X &amp; Team Kodi">
 	<requires>
 		<import addon="xbmc.gui" version="5.12.0"/>
 	</requires>
@@ -141,6 +141,6 @@
 			<screenshot>resources/screenshot-04.jpg</screenshot>
 			<screenshot>resources/screenshot-05.jpg</screenshot>
 		</assets>
-		<news>Added Artwork Downloader integration / Added AutoCompletion integration / Added Library Editor Script integration / Added AutoComplete Toggle to keyboards / Added theme-color to numeric keyboard</news>
+		<news>Added conditional visibility to Artwork Downloader and Library Editor context-menu-entries / Added color-change on focus to keyboardbutton-images / Added plot on OSD / Added some missing textures / Added screenshots to addoninfo</news>
 	</extension>
 </addon>
