@@ -3,7 +3,7 @@
 	<defaultcontrol always="true">9000</defaultcontrol>
 	<coordinates>
 		<left>278</left>
-		<top>60</top>
+		<top>28</top>
 		<origin x="185" y="10">!String.IsEmpty(ListItem.AddonBroken)</origin>
 	</coordinates>
 	<include>dialogeffect</include>
@@ -13,7 +13,7 @@
 			<visible>!Window.isVisible(AddonSettings) + !Window.IsActive(TextViewer)</visible>
 			<include content="DialogBackgroundCommons">
 				<param name="DialogBackgroundWidth" value="1380" />
-				<param name="DialogBackgroundHeight" value="959" />
+				<param name="DialogBackgroundHeight" value="1023" />
 				<param name="DialogHeaderWidth" value="1260" />
 				<param name="DialogHeaderLabel" value="$LOCALIZE[24003]" />
 				<param name="DialogHeaderId" value="2" />
@@ -204,9 +204,9 @@
 					<control type="textbox" id="400">
 						<description>Description</description>
 						<left>15</left>
-						<top>296</top>
+						<top>293</top>
 						<width>900</width>
-						<height>282</height>
+						<height>219</height>
 						<font>font13</font>
 						<align>justify</align>
 						<textcolor>white</textcolor>
@@ -231,7 +231,7 @@
 					<control type="label">
 						<description>Disclaimer txt</description>
 						<left>0</left>
-						<top>600</top>
+						<top>537</top>
 						<width>900</width>
 						<height>38</height>
 						<label>$LOCALIZE[24052]</label>
@@ -243,7 +243,7 @@
 					<control type="textbox">
 						<description>Disclaimer</description>
 						<left>15</left>
-						<top>640</top>
+						<top>577</top>
 						<width>900</width>
 						<height>96</height>
 						<font>font12</font>
@@ -303,8 +303,8 @@
 				<height>470</height>
 				<onleft>60</onleft>
 				<onright>60</onright>
-				<onup>9000</onup>
-				<ondown>9000</ondown>
+				<onup>50</onup>
+				<ondown>50</ondown>
 				<itemgap>3</itemgap>
 				<control type="button" id="9">
 					<description>Configure Addon</description>
@@ -354,6 +354,31 @@
 					<align>center</align>
 					<font>font12_title</font>
 				</control>
+			</control>
+			<control type="panel" id="50">
+				<left>25</left>
+				<top>858</top>
+				<width>1340</width>
+				<height>144</height>
+				<onup>9000</onup>
+				<ondown>9000</ondown>
+				<orientation>horizontal</orientation>
+				<itemlayout height="144" width="268">
+					<control type="image">
+						<width>256</width>
+						<height>144</height>
+						<texture background="true">$INFO[ListItem.Icon]</texture>
+					</control>
+				</itemlayout>
+				<focusedlayout height="144" width="268">
+					<control type="image">
+						<left>-8</left>
+						<top>-4</top>
+						<width>272</width>
+						<height>153</height>
+						<texture background="true">$INFO[ListItem.Icon]</texture>
+					</control>
+				</focusedlayout>
 			</control>
 			<control type="group">
 				<visible>!String.IsEmpty(ListItem.AddonBroken)</visible>
